src/App.css
* {
  line-height: 1.3;
}

button {
  color: #222;
  text-decoration: none;
  font-weight: bold;
  padding: 1em 2em;
  background: #fff;
  border-radius: 0.4em;
  transition: 0.2s;
  font-size: 1rem;
  border: none;
  margin-bottom: 1.5em;
  cursor: pointer;
}

button:hover {
  color: #fff;
  background: #222;
}

video {
  width: 320px;
}

.app {
  width: 100vw;
  min-height: 100vh;
  background-color: white;
  overflow: hidden;
  color: white;
  transition: all 0.2s;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.content {
  overflow: hidden;
  padding: 4em;
  width: 90vw;
}

.projectList {
  text-align: left;
  transition: all 0.2s;
  background: #222;
  position: relative;
  padding: 1.25em;
  width: 10vw;
}

.projectListTitle {
  cursor: pointer;
  color: #888;
  transition: 0.2s;
  font-size: 0.9rem;
  margin: 0;
  margin-bottom: 1.5em;
  clear: both;
  float: left;
  font-weight: bold;
}

.projectListTitle:hover {
  color: #fff;  
}

.projectListTitleActive, .projectListTitleActive:hover {
  color: #fff;
}

.projectName {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.projectName > h1, h2 {
  align-self: flex-end;
  font-size: 4rem;
  text-transform: uppercase;
  margin: 0;
}

.projectName > h2 {
  font-size: 2rem;
  margin-bottom: 2em;
}

.projectText, .builtWithText {
  margin-top: 0;
  font-size: 1.25rem;
}

.projectText, .builtWith {
  margin-bottom: 1.5em;
}

.builtWithText {
  margin-bottom: 0;
  font-weight: bold;
}

.urlsWrapper {
  display: flex;
}

.urlsWrapper > * {
  margin-right: 1.5em;
}

.urlsWrapper:last-child {
  margin-right: 0;
}

.projectMedia {
  display: grid;
  max-width: 100%;
  grid-gap: 10px;
  grid-auto-rows: minmax(100px, auto);
  margin-top: 0.5em;
}

.projectMedia > img, video {
  display: block;
  max-width: 100%;
  height: auto;
  cursor: pointer;

  opacity: 0;
  animation: fadein 0.3s linear 0s 1 forwards;
  border-radius: 6px;
  border: 2px solid rgba(255, 255, 255, 0);
  transition: 0.2s;
}

.projectMedia > img:hover {
  border: 2px solid rgba(255, 255, 255, 255);
}

.party {
  animation: party-anim 5s infinite ease-out;
}

.smallProject {
  margin-bottom: 3em;
}

.smallProject > h2 {
  font-size: 2rem;
  margin-bottom: 0.5em;
  font-weight: bolder;
}

.icon {
  width: 32px;
  height: 32px;
  margin-right: 0.75em;
}

.iconTextWrapper {
  display: flex;
  align-items: center;
}

.emailAddress {
  font-weight: bold;
}

@keyframes party-anim {
  0%   {background-color: hsl(0, 80%, 50%)}
  20%  {background-color: hsl(30, 100%, 60%);}
  40%  {background-color: hsl(120, 80%, 50%);}
  60%  {background-color: hsl(180, 80%, 50%);}
  70%  {background-color: hsl(220, 80%, 50%);}
  80%  {background-color: hsl(300, 80%, 50%);}
  100% {background-color: hsl(360, 80%, 50%);}
}

@keyframes fadein {
  from {
    opacity: 0;
  }

  to  {
    opacity: 1;
  }
}

@media only screen and (max-width: 840px) {
  iframe {
    width: 90vw;
    height: 60vw;
  }

  button {
    width: 100%;
    padding: 1em 0;
  }
  
  .app {
    flex-direction: column;
  }

  .content {
    padding: 2em;
    width: auto;
  }

  .projectList {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    margin-bottom: 1.5em;
    width: auto;
  }

  .projectListTitle {
    margin: 1em;
  }

  .projectName > h1, h2 {
    align-self: center;
  }

  .projectName > h1 {
    font-size: 2rem;
  }

  .projectName > h2 {
    font-size: 1rem;
    margin-bottom: 3em;
  }

  .projectMedia {
    grid-auto-rows: auto;
  }

  .smallProject > h2 {
    font-size: 1.5rem;
    font-weight: bolder;
  }

  .urlsWrapper {
    flex-wrap: wrap;
  }

  .urlsWrapper > * {
    margin-right: 0;
    margin-bottom: 0.5em;
  }
}

